--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="column">
             <div class="img-wrapper">
               <img
-                src="./img/header img.png"
+                src="./img/header-img.png"
                 alt=""
                 class="section-img-wrapper"
               />
@@ -89,7 +89,7 @@
             </div>
           </div>
           <div class="p-10">
-            <img src="./img/sectionImgnew2.png" alt="" />
+            <img src="./img/sectionimgnew2.png" alt="" />
             <div class="content text-center">
               <h3 class="text-uppercase text-white">Advance Class</h3>
               <p class="text-white">
@@ -98,7 +98,7 @@
             </div>
           </div>
           <div class="p-10">
-            <img src="./img/sectionImgnew3.png" alt="" />
+            <img src="./img/sectionimgnew3.png" alt="" />
             <div class="content text-center">
               <h3 class="text-uppercase text-white">Expert Class</h3>
               <p class="text-white">
